formatting the parishes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- <img src="images/WehYuhDeh.png" alt="WehYuhDeh" class="custom_image"><br> -->
     <form>
 
-        <label for="parish">Parish:</label>
+        <label for="parish">Select Parish:</label>
         <select id="parish" name="parish">
             <option value="KingstonStAndrew">Kingston & St. Andrew</option>
             <option value="StThomas">St. Thomas</option>
